# ecp-dns-auth

./: .gitignore  Cargo.toml  fastly.toml
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/src/op/: mod.rs
crates/proto/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/server/src/authority/: mod.rs
crates/server/src/server/: mod.rs  request_handler.rs
src/: dns.rs  lookup.rs  main.rs  query.html
