[package]
name = "ecp-dns-auth"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
base64 = "0.13.0"
fastly = "^0.8.7"
serde_json = "1.0.85"


# Upstream versions of these crates depend on tokio features that 
# wasm doesn't support. Vendor in stub versions here with only the 
# code that we need
trust-dns-client = { version = "0.22.0", default-features = false, path = "crates/client" }
trust-dns-server = { version = "0.22.0", default-features = false, path = "crates/server" }

# In theory we can use the upstream version but we're vendoring it
# to keep it in step with the crates above
trust-dns-proto = { version = "0.22.0", default-features = false, path = "crates/proto" }
