[package]
name = "ecp-dns-auth"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
base64 = "0.13.0"
fastly = "^0.8.7"
handlebars = "4.3.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
trust-dns-proto = { version = "0.22.0", default-features = false, features = ["serde-config"] }
